add new endpoint for PhotoController - getUserPhoto